--- a/src/app/blog/admin/admin.component.html
+++ b/src/app/blog/admin/admin.component.html
@@ -1,7 +1,8 @@
 <div class="page_admin">
   <h1>Панель адменистратора</h1>
+
   <section class="users">
-    <h2>Работа с пользователями</h2>
+    <h2 class="label_sub_group">Работа с пользователями</h2>
     <div class="action">
       <div class="user_list">
         <div class="label_line">
@@ -13,6 +14,15 @@
         </div>
         <div class="user_list_area">
           <ul>
+            <li class="user">
+              <div class="name">
+                <h2>Andrey123</h2>
+                <hr>
+              </div>
+              <div class="button button_edit">E</div>
+              <div class="button button_comments">C</div>
+              <div class="button button_ban">D</div>
+            </li>
             <li class="user">
               <div class="name">
                 <h2>Andrey123</h2>
@@ -116,6 +126,7 @@
       </div>
     </div>
   </section>
+
   <section class="articles">
     <mat-expansion-panel>
       <mat-expansion-panel-header>
@@ -168,6 +179,7 @@
       </ul>
     </mat-expansion-panel>
   </section>
+
   <section class="add_article">
     <mat-expansion-panel>
       <mat-expansion-panel-header>
