--- a/src/app/blog/signup-signin/signup-signin.component.scss
+++ b/src/app/blog/signup-signin/signup-signin.component.scss
@@ -20,6 +20,18 @@
 
   .signin {
     height: 300px;
+    form{
+      display: flex;
+      flex-direction: column;
+      mat-form-field {
+        width: 500px;
+      }
+
+      button {
+        width: 200px;
+        margin-top: 20px;
+      }
+    }
   }
 
   .signup {
