--- a/src/app/main-nav/main-nav.component.scss
+++ b/src/app/main-nav/main-nav.component.scss
@@ -129,6 +129,7 @@ footer {
   display: flex;
   flex-direction: column;
   background-color: #EFEFEF;
+  height: 300px;
 
   .upper {
     margin-top: 56px;
