--- a/src/app/blog/user-page/user-page.component.html
+++ b/src/app/blog/user-page/user-page.component.html
@@ -8,29 +8,100 @@
     <ul class="user_data">
       <h2>Информация</h2>
       <li>
-        <div class="name">Катя</div>
-        <hr>
-        <div class="label">Ваше Имя</div>
+        <div class="data">
+          <div class="name">Катя</div>
+          <hr>
+          <div class="label">Ваше Имя</div>
+        </div>
         <div class="button">Сменить Имя</div>
       </li>
       <li>
-        <div class="name">Шорсткина</div>
-        <hr>
-        <div class="label">Ваше Фамилия</div>
+        <div class="data">
+          <div class="name">Шорсткина</div>
+          <hr>
+          <div class="label">Ваше Фамилия</div>
+        </div>
         <div class="button">Сменить Фамилию</div>
       </li>
       <li>
-        <div class="name">andrejs232@gmail.com</div>
-        <hr>
-        <div class="label">Ваш Е-майл</div>
+        <div class="data">
+          <div class="name">andrejs232@gmail.com</div>
+          <hr>
+          <div class="label">Ваш Е-майл</div>
+        </div>
         <div class="button">Сменить Е-майл</div>
       </li>
       <li>
-        <div class="name">**************</div>
-        <hr>
-        <div class="label">Ваше Пароль</div>
+        <div class="data">
+          <div class="name">**************</div>
+          <hr>
+          <div class="label">Ваше Пароль</div>
+        </div>
         <div class="button">Сменить Пароль</div>
       </li>
     </ul>
   </div>
+
+<section class="comments">
+
+  <h2 class="section_name">Ваши коментарии</h2>
+
+  <ul class="comment_list">
+    <li class="comment">
+      <div class="label">
+        <img src="/assets/img/blog/eco_section.jpg" alt="article_image" class="article_image">
+        <h2>Реструктуризация финансовых рынков</h2>
+      </div>
+      <div class="comment_body">
+        С другой стороны выбранный нами инновационный путь требует от нас анализа системы масштабного изменения ряда
+        параметров. Дорогие друзья, консультация с профессионалами из IT представляет собой интересный эксперимент
+        проверки позиций, занимаемых участниками в отношении поставленных задач! Не следует, однако, забывать о том, что
+        социально-экономическое развитие влечет за собой процесс внедрения и модернизации системы масштабного изменения
+        ряда параметров.
+      </div>
+    </li>
+
+    <li class="comment">
+      <div class="label">
+        <img src="/assets/img/blog/eco_section.jpg" alt="article_image" class="article_image">
+        <h2>Реструктуризация финансовых рынков</h2>
+      </div>
+      <div class="comment_body">
+        С другой стороны выбранный нами инновационный путь требует от нас анализа системы масштабного изменения ряда
+        параметров. Дорогие друзья, консультация с профессионалами из IT представляет собой интересный эксперимент
+        проверки позиций, занимаемых участниками в отношении поставленных задач! Не следует, однако, забывать о том, что
+        социально-экономическое развитие влечет за собой процесс внедрения и модернизации системы масштабного изменения
+        ряда параметров.
+      </div>
+    </li>
+
+    <li class="comment">
+      <div class="label">
+        <img src="/assets/img/blog/eco_section.jpg" alt="article_image" class="article_image">
+        <h2>Реструктуризация финансовых рынков</h2>
+      </div>
+      <div class="comment_body">
+        С другой стороны выбранный нами инновационный путь требует от нас анализа системы масштабного изменения ряда
+        параметров. Дорогие друзья, консультация с профессионалами из IT представляет собой интересный эксперимент
+        проверки позиций, занимаемых участниками в отношении поставленных задач! Не следует, однако, забывать о том, что
+        социально-экономическое развитие влечет за собой процесс внедрения и модернизации системы масштабного изменения
+        ряда параметров.
+      </div>
+    </li>
+
+    <li class="comment">
+      <div class="label">
+        <img src="/assets/img/blog/eco_section.jpg" alt="article_image" class="article_image">
+        <h2>Реструктуризация финансовых рынков</h2>
+      </div>
+      <div class="comment_body">
+        С другой стороны выбранный нами инновационный путь требует от нас анализа системы масштабного изменения ряда
+        параметров. Дорогие друзья, консультация с профессионалами из IT представляет собой интересный эксперимент
+        проверки позиций, занимаемых участниками в отношении поставленных задач! Не следует, однако, забывать о том, что
+        социально-экономическое развитие влечет за собой процесс внедрения и модернизации системы масштабного изменения
+        ряда параметров.
+      </div>
+    </li>
+  </ul>
+</section>
 </div>
