--- a/src/app/blog/signup-signin/signup-signin.component.scss
+++ b/src/app/blog/signup-signin/signup-signin.component.scss
@@ -6,6 +6,11 @@
   margin-top: 200px;
   margin-bottom: 200px;
   margin-left: 40px;
+  mat-spinner{
+    position: fixed;
+    top: 30%;
+    left: 50%;
+  }
 
   section {
     width: 600px;
@@ -67,7 +72,15 @@
     section{
       width: 350px;
     }
+    .signin {
+      height: 300px;
+      form{
+        mat-form-field {
+          width: 240px;
+        }
 
+      }
+    }
     .signup {
       mat-expansion-panel {
         .mat-expansion-panel-body {
