--- a/src/app/blog/user-page/user-page.component.html
+++ b/src/app/blog/user-page/user-page.component.html
@@ -1,4 +1,5 @@
 <div class="page">
+  <mat-spinner *ngIf='spinner'></mat-spinner>
   <h1>Ваш Профиль</h1>
   <div class="user_info">
     <div class="profile_image">
@@ -9,7 +10,7 @@
       <h2>Информация</h2>
       <li>
         <div class="data">
-          <div class="name">Катя</div>
+          <div class="name" #name>Катя</div>
           <hr>
           <div class="label">Ваше Имя</div>
         </div>
@@ -17,7 +18,7 @@
       </li>
       <li>
         <div class="data">
-          <div class="name">Шорсткина</div>
+          <div class="name" #surname>Шорсткина</div>
           <hr>
           <div class="label">Ваше Фамилия</div>
         </div>
@@ -25,7 +26,7 @@
       </li>
       <li>
         <div class="data">
-          <div class="name">andrejs232@gmail.com</div>
+          <div class="name" #email>andrejs232@gmail.com</div>
           <hr>
           <div class="label">Ваш Е-майл</div>
         </div>
