--- a/src/app/blog/user-page/user-page.component.scss
+++ b/src/app/blog/user-page/user-page.component.scss
@@ -10,7 +10,15 @@
   flex-direction: column;
   margin-top: 150px;
   width: 100%;
+
+  mat-spinner{
+    position: fixed;
+    top: 30%;
+    left: 50%;
+  }
+
   // All user data
+
   .user_info {
     display: flex;
     width: 70%;
@@ -42,8 +50,13 @@
       .user_image {
         width: 300px;
         height: 280px;
-        background-image: url("/assets/img/blog/katja.jpg");
+        background-image: url("/assets/img/blog/unnamed.png");
         background-repeat: no-repeat;
+      }
+
+      .button{
+        width: 200px;
+        margin-top: 20px;
       }
     }
     // Data without images
@@ -88,13 +101,14 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    margin-left: 400px;
-    width: 100%;
+    margin-left: 200px;
+    width: 900px;
     border: none;
 
     .section_name {
       color: #FABB65;
       font-size: 45px;
+      margin-left: 100px;
       margin-bottom: 60px;
     }
 
