--- a/src/app/blog/signup-signin/signup-signin.component.scss
+++ b/src/app/blog/signup-signin/signup-signin.component.scss
@@ -55,6 +55,11 @@
           button {
             width: 200px;
           }
+          .text-successful{
+            margin-top: 10px;
+            color: rgb(2, 172, 2);
+            font-family: 'Poppins', sans-serif;
+          }
         }
       }
     }
